namespace CabinetInfirmier.Csharp;

public class Adresse
{
    private string adresse;
    private string nom;

    public Adresse(string adresse, string nom)
    {
        this.adresse = adresse;
        this.nom = nom;
    }
}