@startuml

'skinparam linetype ortho
'l'instruction au dessus est pour avoir des lignes orthogonales...

package XMLSchema #DDDDDD {
    class string
    class date
    class int
}
package URICabinet {
    note as noteHeritagePersonne
        note : on pourrait rajouter une classe «Personne»
        on aura donc un Patient et Infirmier qui hériteront
        de la classe Personne
    end note
    
    class Cabinet {
        nom : string
        adresse : Adresse
        infirmiers : Infirmier[]
        patients : Patient[]
    }
    note left of Cabinet
        <<racine>> cabinet
    end note
    
    class Infirmier {
        {unique}{attribute} id : int {>0} 
        nom : string
        prénom : string
        photo : Photo
    }
    class Photo <<pattern>> {
        [A-Za-z]*
    }
    note right of Photo
        À changer éventuellement
    end note
    
    class Patient {
        nom : string
        prénom : string
        sexe : Sexe
        naissance : date
        numéro : NuméroSecuritéSociale
        adresse : Adresse
    }
    
    class Adresse {
        {optional} étage : int {>0}
        {optional} numéro : int {>0}
        rue : string
        codePostal : CodePostal
        ville : string
    }
    
    Enum Sexe  {
        M
        F
    }
    
    class NuméroSecuritéSociale <<pattern>> {
        [12] \d{2} ([1][0-2]|[0][1-9]) \d{5} \d{3} \d[1-7]
    }
    note top of NuméroSecuritéSociale
        1er chiffre : Sexe (1 pour homme, 2 pour femme).
        2e et 3e chiffres : Année de naissance.
        4e et 5e chiffres : Mois de naissance.
        6e à 10e chiffres : Code INSEE de lieu de naissance.
        11e à 13e chiffres : Numéro d'ordre.
        14e et 15e chiffres : Clé de contrôle.
    end note
    
    class CodePostal <<pattern>> {
        \d{5}
    }
    note right of CodePostal
        un nombre à 5 chiffres
    end note
    
    class Visite {
        {attribute} date : date
        {attribute} intervenant : string
        acte : Acte
    }
    note left of Visite::intervenant
        ∈ Infirmier.id
        'intervenant ∈ Infirmier.id
    end note
    
    class Acte {
        {attribute} id : int {>0}
    }
    note right of Acte::id
        ∈ Actes.Acte.id
        'id ∈ Acte.id
    end note
    
    Cabinet *--"1..*" Infirmier : liste
    Cabinet *--"1..*" Patient : liste
    Cabinet *--"1" Adresse
    
    Infirmier *-- "1" Photo
    
    Patient *--"1" Sexe
    Patient "1"*--"1..*" Visite
    Patient "1"*--"1" NuméroSecuritéSociale
    Patient *--"1" Adresse
    
    Visite "0..*"*--"1..*" Acte
    
    Adresse "*" *--"1" CodePostal
    
    Sexe --|> string
    NuméroSecuritéSociale --|> string
    CodePostal --|> string
    Photo --|> string
}
@enduml